--- a/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
@@ -12,6 +12,9 @@
 <link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
 <link href="~/ThirdParty/plugins/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
 <script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
+<link href="~/ThirdParty/plugins/jquery-magnific-popup/magnific-popup.css" rel="stylesheet" />
+<link href="~/ThirdParty/plugins/jquery-ui/jquery-ui.css" rel="stylesheet" />
+<script src="~/ThirdParty/plugins/jquery-magnific-popup/jquery.magnific-popup.js"></script>
 
 <style type="text/css">
     .dataTables_wrapper {
@@ -126,13 +129,40 @@
                                     </td>
                                     <td>
                                         @*@Html.DisplayFor(modelItem => item.Front)*@
-                                        <img id="PictureFront" style="width:20vw;" src="data:image/webp;base64,@item.Front" />
+                                        @if (item.Front != null)
+                                        {
+                                            var base64 = Convert.ToBase64String(item.Front);
+                                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                                            <div class="zoom-gallery display-None">
+                                                <a href="@imgSrc" data-source="" title="Front" style="width:640px;height:480px;">
+                                                    <img width="30" src="@imgSrc"/>
+                                                </a>
+                                            </div>
+                                        }
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Side)
+                                        @if (item.Side != null)
+                                        {
+                                            var base64 = Convert.ToBase64String(item.Side);
+                                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                                            <div class="zoom-gallery">
+                                                <a href="@imgSrc" data-source="" title="Side" style="width:640px;height:480px;">
+                                                    <img style="width:20vw;" src="@imgSrc" />
+                                                </a>
+                                            </div>
+                                        }
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Back)
+                                        @if (item.Back != null)
+                                        {
+                                            var base64 = Convert.ToBase64String(item.Back);
+                                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                                            <div class="zoom-gallery">
+                                                <a href="@imgSrc" data-source="" title="Back" style="width:640px;height:480px;">
+                                                    <img style="width:20vw;" src="@imgSrc" />
+                                                </a>
+                                            </div>
+                                        }
                                     </td>
                                 </tr>
                             }
