--- a/Quality/Quality/Views/PublicWondow/SewingLineList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/SewingLineList.cshtml
@@ -6,62 +6,63 @@
 
 @model List<Window_SewingLine>
 
-    <script src="~/Scripts/jquery-3.5.1.min.js"></script>
+<script src="~/Scripts/jquery-3.5.1.min.js"></script>
 
-    <style>
+<style>
 
-        ul {
-            padding: 0;
-        }
+    ul {
+        padding: 0;
+    }
 
-        li {
-            list-style-type: none;
-            border: 1px solid black;
-            padding: 2px;
-        }
+    li {
+        list-style-type: none;
+        border: 1px solid black;
+        padding: 2px;
+    }
 
-        td {
-            border-style: ridge;
-        }
+    td {
+        border-style: ridge;
+    }
 
-        .head {
-            border-top: 2px solid black;
-            text-align: center;
-            font-size: 1.2em;
-            background-color: lightgray;
-        }
+    .head {
+        border-top: 2px solid black;
+        text-align: center;
+        font-size: 1.2em;
+        background-color: lightgray;
+    }
 
-        li:hover {
-            background-color: lightblue;
-            cursor: pointer;
-        }
-    </style>
+    li:hover {
+        background-color: lightblue;
+        cursor: pointer;
+    }
+</style>
 
-    <fieldset style="width:284px;height:500px;">
-        <legend>SewingLine</legend>
-        @using (Html.BeginForm("SewingLineList", ViewContext.RouteData.GetRequiredString("Controller"), new { }, FormMethod.Post, new { @width = "100%", @height = "5%", @style = "margin-bottom:10px;" }))
-        {
+<fieldset style="width:284px;height:500px;">
+    <legend>SewingLine</legend>
+    @using (Html.BeginForm("SewingLineList", ViewContext.RouteData.GetRequiredString("Controller"), new { }, FormMethod.Post, new { @width = "100%", @height = "5%", @style = "margin-bottom:10px;" }))
+    {
         <input type="text" name="ID" value="" />
+        @Html.Hidden("FactoryID", ViewData["FactoryID"]);
         <input type="submit" value="Query" />
         <input id="" type="button" value="Exit" />
-        }
-        @*</div>*@
+    }
+    @*</div>*@
 
-        <div style="width:100%;height:90%;overflow-y: scroll;">
-            <ul border="1" style="width:100%;height:100%;">
-                <li class="head">
-                    SewingLine
-                </li>
-                @foreach (var item in Model)
-                {
+    <div style="width:100%;height:90%;overflow-y: scroll;">
+        <ul border="1" style="width:100%;height:100%;">
+            <li class="head">
+                SewingLine
+            </li>
+            @foreach (var item in Model)
+            {
                 <li class="SelectItem">@item.ID</li>
 
-                }
-            </ul>
-        </div>
-    </fieldset>
+            }
+        </ul>
+    </div>
+</fieldset>
 
-    <script>
+<script>
 
 
     $(function () {
@@ -77,4 +78,4 @@
             window.close();
         });
     });
-    </script>
+</script>
