--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
@@ -15,7 +15,7 @@
         }
 
         .col-auto {
-            margin: 1em
+            margin: 1.5em
         }
 
         .table_div > tbody > tr > td > * {
@@ -24,6 +24,11 @@
 
         #myCartons_info, #myEndlineMoisture_info, #myView_info {
             color: white
+        }
+
+        .table_div tr td:nth-child(2n+1) {
+            font-size:1.2em;
+            font-weight:bold;
         }
 
         #myCartons_previous, #myCartons_next,
@@ -51,7 +56,7 @@
 {
     <div class="DownLeftWhiteBackgrond">
         <div style="padding:0.5em">
-            <div class="col-auto"><h1 style="font-size:1.5em">Inspection Setting</h1></div>
+            <div class="col-auto"><h1 style="font-size:1.5em;color:#999999">Moisture for what?</h1></div>
             <div>
                 <table class="col-auto table_div" style="width:100%">
                     <tr>
@@ -59,9 +64,9 @@
                         <td>@Html.DropDownList("Article", (List<SelectListItem>)ViewBag.ListArticle, null, new { @class = "form-control", @onchange = "onInspectionStageChange(this.value)" })</td>
                     </tr>
                     <tr>
+                        <td><label class="cartonData">carton#</label></td>
+                        <td>@Html.TextBox("Cartons", string.Empty, new { @class = "cartonData", @readonly = "readonly", @onclick = "open_cartonsDetail()" })</td>
                         @Html.HiddenFor(o => o.FinalInspection_OrderCartonUkey)
-                        <td><label id="labCarton">carton#</label></td>
-                        <td>@Html.TextBox("Cartons", string.Empty, new { @readonly = "readonly", @onclick = "open_cartonsDetail()" })</td>
                     </tr>
                 </table>
             </div>
@@ -71,7 +76,7 @@
         <div style="padding:0.5em">
             <div style="margin: 1em">
                 @Html.HiddenFor(o => o.FinalInspectionID)
-                <div class="col-auto"><h1 style="font-size:1.5em">Moisture</h1></div>
+                <div class="col-auto"><h1 style="font-size:1.5em;color:#999999">Moisture</h1></div>
                 <button class="site-btn btn-blue" type="button" id="View" style="position:absolute;top:1em;right:8.6em">View</button>
                 <button class="site-btn btn-blue" type="button" id="Save" style="position:absolute;top:1em;right:0">Save</button>
                 <div>
@@ -95,11 +100,11 @@
                         <td colspan="4"><label>(Standard:<label id="GarmentStandard"></label>)</label></td>
                     </tr>
                     <tr>
-                        <td><label>Top</label></td>
+                        <td style="text-align:right"><label>Top</label></td>
                         <td>@Html.TextBoxFor(o => o.GarmentTop, new { @type = "number", @step = "0.1", @onchange= "setColor();", @style = "width:100px" })</td>
-                        <td><label>Middle</label></td>
+                        <td style="text-align:right"><label>Middle</label></td>
                         <td>@Html.TextBoxFor(o => o.GarmentMiddle, new { @type = "number", @step = "0.1", @onchange = "setColor();", @style = "width:100px" })</td>
-                        <td><label>Bottom</label></td>
+                        <td style="text-align:right"><label>Bottom</label></td>
                         <td>@Html.TextBoxFor(o => o.GarmentBottom, new { @type = "number", @step = "0.1", @onchange = "setColor();", @style = "width:100px" })</td>
                     </tr>
                     <tr>
@@ -107,10 +112,10 @@
                         <td colspan="4"><label>(Standard:@ViewBag.FinalInspection_CTNMoisureStandard)</label></td>
                     </tr>
                     <tr>
-                        <td><label>Inside</label></td>
-                        <td>@Html.TextBoxFor(o => o.CTNInside, new { @type = "number", @step = "0.1", @onchange = "setColor();", @style = "width:100px" })</td>
-                        <td><label>Outside</label></td>
-                        <td>@Html.TextBoxFor(o => o.CTNOutside, new { @type = "number", @step = "0.1", @onchange = "setColor();", @style = "width:100px" })</td>
+                        <td style="text-align:right"><label class="cartonData">Inside</label></td>
+                        <td>@Html.TextBoxFor(o => o.CTNInside, new { @class= "cartonData", @type = "number", @step = "0.1", @onchange = "setColor();", @style = "width:100px" })</td>
+                        <td style="text-align:right"><label>Outside</label></td>
+                        <td>@Html.TextBoxFor(o => o.CTNOutside, new { @class = "cartonData", @type = "number", @step = "0.1", @onchange = "setColor();", @style = "width:100px" })</td>
                         <td colspan="2"></td>
                     </tr>
                 </table>
@@ -131,6 +136,7 @@
                 </table>
             </div>
             <input type="hidden" id="goPage" name="goPage">
+            <div style="position:absolute;right:1em;bottom:6em;font-size:0.8em">Inline, 3rd Party can skip this step</div>
             <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" style="right:7em;" class="button">Back</button>
             <button id="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
         </div>
@@ -252,8 +258,9 @@
 
         $(function () {
             if (@ViewBag.ListCartonItem.Count == 0) {
-                $('#labCarton').css('visibility', 'hidden');
-                $('#Cartons').css('visibility', 'hidden');
+                $('.cartonData').each(function (){
+                    $(this).attr('disabled', 'disabled');
+                });
             }
 
             $(".detail-dialog").dialog({
@@ -520,7 +527,7 @@
 
             var cartonsValue = @ViewBag.FinalInspection_CTNMoisureStandard;
 
-            $("#Result").text("False");
+            $("#Result").text("Fail");
             $("#Result").css("color", "#E62513");
 
 //當下列一個成立則顯示Fail，反之則Pass
@@ -535,13 +542,23 @@
             }
             else {
                 garmentStandardValue = parseInt(garmentStandard);
-                if (garmentStandardValue >= parseInt($("#GarmentTop").val()) &&
-                    garmentStandardValue >= parseInt($("#GarmentMiddle").val()) &&
-                    garmentStandardValue >= parseInt($("#GarmentBottom").val()) &&
-                    cartonsValue >= parseInt($("#CTNInside").val()) &&
-                    cartonsValue >= parseInt($("#CTNOutside").val())) {
-                    $("#Result").text("Pass");
-                    $("#Result").css("color", "#00CC00");
+                if (@ViewBag.ListCartonItem.Count == 0) {
+                    if (garmentStandardValue >= parseInt($("#GarmentTop").val()) &&
+                        garmentStandardValue >= parseInt($("#GarmentMiddle").val()) &&
+                        garmentStandardValue >= parseInt($("#GarmentBottom").val())) {
+                        $("#Result").text("Pass");
+                        $("#Result").css("color", "#00CC00");
+                    }
+                }
+                else {
+                    if (garmentStandardValue >= parseInt($("#GarmentTop").val()) &&
+                        garmentStandardValue >= parseInt($("#GarmentMiddle").val()) &&
+                        garmentStandardValue >= parseInt($("#GarmentBottom").val()) &&
+                        cartonsValue >= parseInt($("#CTNInside").val()) &&
+                        cartonsValue >= parseInt($("#CTNOutside").val())) {
+                        $("#Result").text("Pass");
+                        $("#Result").css("color", "#00CC00");
+                    }
                 }
             }
         }
